syntax = "proto3";
//google文件夹 ：F:\GoProjects\pkg\mod\github.com\grpc-ecosystem\grpc-gateway@v1.16.0\third_party\googleapis
option go_package="./;services";
package services;


import "google/api/annotations.proto";

message ProdRequest{
    int32 prod_id = 1;
}

message ProResponse{
    int32 prod_stock = 1;
}

service ProdService{
    rpc GetProdStock(ProdRequest) returns (ProResponse){
        option (google.api.http) = {
            get : "/v1/prod_id/{prod_id}"
        };
    }
}